--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,15 @@ body{
 	font-family: 'Oswald', sans-serif;
   font-weight: 700;
 }
-.button_group{
+.button_group0{
+  width: 100%;
+  display: flex;
+}
+.button_group1{
+  width: 100%;
+  display: flex;
+}
+.button_group2{
   width: 100%;
   display: flex;
 }
