--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body{
 	font-family: 'Oswald', sans-serif;
   font-weight: 700;
 }
+.button_group_minus_2{
+  width: 100%;
+  display: flex;
+}
+.button_group_minus_1{
+  width: 100%;
+  display: flex;
+}
 .button_group0{
   width: 100%;
   display: flex;
@@ -26,6 +34,10 @@ body{
   display: flex;
 }
 .button_group5{
+  width: 100%;
+  display: flex;
+}
+.button_group6{
   width: 100%;
   display: flex;
 }
